# janitor

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  screenshots.md  supabase-guide.md
src/janitor/: __init__.py  config.py  context.py  logging.py  main.py  version.py
src/janitor/commands/: __init__.py  brew.py  disk.py  docker.py  doctor.py  k3s.py  logs.py  secrets.py  supabase.py
src/janitor/models/: __init__.py  common.py  disk.py  docker.py  k3s.py  system.py
src/janitor/services/: __init__.py  brew.py  disk.py  docker.py  k3s.py  logs.py  secrets.py  shell.py  supabase.py  supabase_admin.py  system.py
src/janitor/utils/: __init__.py  console.py  format.py  prompt.py
tests/: conftest.py  test_cli.py  test_cli_full.py  test_config.py  test_format.py  test_models.py  test_prompt.py  test_services_brew.py  test_services_disk.py  test_services_docker.py  test_services_k3s.py  test_services_logs.py  test_services_secrets.py  test_services_supabase.py  test_services_system.py  test_shell.py
