[project]
name = "janitor-cli"
version = "0.1.0"
description = "Janitor — a Swiss Army knife for workstation and platform housekeeping."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Janitor Contributors" }]
keywords = ["cli", "devops", "sre", "housekeeping", "docker", "kubernetes", "homebrew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
]

[project.urls]
Homepage = "https://github.com/silverbeer/janitor"
Repository = "https://github.com/silverbeer/janitor"
Issues = "https://github.com/silverbeer/janitor/issues"

[project.scripts]
jt = "janitor.main:app"

[project.optional-dependencies]
# Supabase Admin API client, needed only for `jt supabase sync-users`.
# Kept optional so the core CLI stays lean: `uv tool install 'janitor-cli[supabase]'`.
supabase = [
    "supabase>=2.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "supabase>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/janitor"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific
]
ignore = [
    "B008", # function call in default arg — required by Typer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src/janitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=janitor --cov-report=term-missing"
markers = [
    "integration: end-to-end CLI tests",
]

[tool.coverage.run]
source = ["janitor"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
